# cmms_starter

./: README.md
backend/: .env.example  docker-compose.yml  dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: inventory.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: inventory.py  users.py  work_orders.py
backend/app/schemas/: inventory.py
backend/scripts/: seed.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/inventory/: page.tsx
